--- a/main.tex
+++ b/main.tex
@@ -32,7 +32,7 @@
 \aphor{We}{ want decent housing,}{fit for the shelter of human beings.} We believe that if the landlords will not give decent housing to our Black and oppressed communities, then the housing and the land should be made into cooperatives so that the people in our communities, with government aid, can build and make decent housing for the people.
 
 
-\aphor{We}{ want education}{for our people that exposes the true nature of this decadent American society. We want education that teaches us our true history and our role in the present-day society.} We believe in an educational system that will give to our people a knowledge of self. If you do not have knowledge of yourself and your position in the society and the world, then you will have little chance to know anything else.
+\aphor{We}{ want education}{for our people that exposes the true nature of this decadent American society.} We want education that teaches us our true history and our role in the present-day society. We believe in an educational system that will give to our people a knowledge of self. If you do not have knowledge of yourself and your position in the society and the world, then you will have little chance to know anything else.
 
 \aphor{We}{ want completely free health care}{for all black and oppressed people.} We believe that the government must provide, free of charge, for the people, health facilities which will not only treat our illnesses, most of which have come about as a result of our oppression, but which will also develop preventative medical programs to guarantee our future survival. We believe that mass health education and research programs must be developed to give all black and oppressed people access to advanced scientific and medical information, so we may provide ourselves with proper medical attention and care.
 
@@ -40,7 +40,7 @@
 
 \aphor{We}{ want an immediate end}{to all wars of aggression.} We believe that the various conflicts which exist around the world stem directly from the aggressive desires of the U.S. ruling circle and government to force its domination upon the oppressed people of the world. We believe that if the U.S. government or its lackeys do not cease these aggressive wars that it is the right of the people to defend themselves by any means necessary against their aggressors.
 
-\aphor{We}{ want freedom}{for all black and poor oppressed people now held in U.S. federal, state, county, city and military prisons and jails. We want trials by a jury of peers for all persons charged with so-called crimes under the laws of this country.} We believe that the many black and poor oppressed people now held in U.S. prisons and jails have not received fair and impartial trials under a racist and fascist judicial system and should be free from incarceration. We believe in the ultimate elimination of all wretched, inhuman penal institutions, because the masses of men and women imprisoned inside the United States or by the U.S. military are the victims of oppressive conditions which are the real cause of their imprisonment. We believe that when persons are brought to trial that they must be guaranteed, by the United States, juries of their peers, attorneys of their choice and freedom from imprisonment while awaiting trials.
+\aphor{We}{ want freedom}{for all black and poor oppressed people now held in U.S. federal, state, county, city and military prisons and jails.} We want trials by a jury of peers for all persons charged with so-called crimes under the laws of this country. We believe that the many black and poor oppressed people now held in U.S. prisons and jails have not received fair and impartial trials under a racist and fascist judicial system and should be free from incarceration. We believe in the ultimate elimination of all wretched, inhuman penal institutions, because the masses of men and women imprisoned inside the United States or by the U.S. military are the victims of oppressive conditions which are the real cause of their imprisonment. We believe that when persons are brought to trial that they must be guaranteed, by the United States, juries of their peers, attorneys of their choice and freedom from imprisonment while awaiting trials.
 
 \aphor{We}{ want land,}{bread, housing, education, clothing, justice, peace and people’s community control of modern technology.} When in the course of human events, it becomes necessary for one people to dissolve the political bands which have connected them with another, and to assume, among the powers of the earth, the separate and equal station to which the laws of nature and nature’s God entitle them, a decent respect to the opinions of mankind requires that they should declare the causes which impel them to the separation. We hold these truths to be self-evident, that all men are created equal; that they are endowed by their Creator with certain unalienable rights; that among these are life, liberty, and the pursuit of happiness. That, to secure these rights, governments are instituted among men, deriving their just powers from the consent of the governed; that, whenever any form of government becomes destructive of these ends, it is the right of the people to alter or to abolish it, and to institute a new government, laying its foundation on such principles, and organizing its powers in such form, as to them shall seem most likely to effect their safety and happiness. 
 Prudence, indeed, will dictate that governments long established should not be changed for light and transient causes; and, accordingly, all experience hath shown that mankind are more disposed to suffer, while evils are sufferable, than to right themselves by abolishing the forms to which they are accustomed. But, when a long train of abuses and usurpations, pursuing invariably the same object, evinces a design to reduce them under absolute despotism, it is their right, it is their duty, to throw off such government, and to provide new guards for their future security.
